--- a/application/pom.xml
+++ b/application/pom.xml
@@ -53,7 +53,63 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <?xml version="1.0" encoding="UTF-8"?>
+    <project xmlns="http://maven.apache.org/POM/4.0.0"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <parent>
+            <artifactId>api-person</artifactId>
+            <groupId>com.leandro</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+        </parent>
+        <modelVersion>4.0.0</modelVersion>
 
+        <artifactId>core</artifactId>
+
+        <properties>
+            <maven.compiler.source>17</maven.compiler.source>
+            <maven.compiler.target>17</maven.compiler.target>
+        </properties>
+
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>3.2.0-SNAPSHOT</version>
+                    <executions>
+                        <execution>
+                            <id>repackage</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+        <profiles>
+            <profile>
+                <id>codeql</id>
+                <activation>
+                    <property>
+                        <name>codeql</name>
+                        <value>true</value>
+                    </property>
+                </activation>
+                <build>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-maven-plugin</artifactId>
+                            <configuration>
+                                <skip>true</skip>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </build>
+            </profile>
+        </profiles>
+
+    </project>
 
 
 </project>
