--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -13,8 +13,6 @@ spring:
     console:
       enabled: true
 
-
-
 graphql:
   servlet:
     enabled: true
@@ -29,4 +27,27 @@ graphql:
     tabs:
       - name: Get People
         query: classpath:playground/people.graphql
+        variables: classpath:playground/people_input.json
+  voyager:
+    enabled: true
+    basePath: /
+    mapping: /voyager
+    endpoint: /graphql
+    cdn:
+      enabled: false
+      version: latest
+    pageTitle: Voyager
+    displayOptions:
+      skipRelay: true
+      skipDeprecated: true
+      rootType: Query
+      sortByAlphabet: false
+      showLeafFields: true
+      hideRoot: false
+    hideDocs: false
+    hideSettings: false
+
+api:
+  node:
+    base-url: http://localhost:3000/
 
