--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths: [ '**.java', '.github/workflows/build.yml', 'pom.xml' ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
