--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,8 @@ jobs:
           coverage-label: coverage (module repository)
           branches-label: branches (module repository)
       - name: Commit the badge (if it changed)
+        permissions:
+          contents: write
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
