--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,12 @@ jobs:
           branches-badge-filename: repository-branches-badge.svg
           coverage-label: coverage (repository)
           branches-label: branches (repository)
+
       - name: Generate JaCoCo Badge
+          id: jacocoMod3
           uses: cicirello/jacoco-badge-generator@v2
           with:
-            jacoco-csv-file: target/site/jacoco/jacoco.csv
+            jacoco-csv-file: application/target/site/jacoco/jacoco.csv
             badges-directory: .github/badges
             generate-coverage-badge: true
             coverage-badge-filename: jacoco.svg
@@ -67,6 +69,7 @@ jobs:
             fail-if-branches-less-than: 0
             fail-on-coverage-decrease: false
             fail-on-branches-decrease: false
+
       - name: Commit the badge (if it changed)
         run: |
           git config --local user.email "action@github.com"
