--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,23 +52,23 @@ jobs:
           badges-directory: .github/badges
           generate-coverage-badge: true
           coverage-badge-filename: jacoco.svg
-          generate-branches-badge: false
+          generate-branches-badge: true
           branches-badge-filename: branches.svg
-          generate-coverage-endpoint: false
+          generate-coverage-endpoint: true
           coverage-endpoint-filename: jacoco.json
-          generate-branches-endpoint: false
+          generate-branches-endpoint: true
           branches-endpoint-filename: branches.json
-          generate-summary: false
+          generate-summary: true
           summary-filename: coverage-summary.json
           coverage-label: coverage
           branches-label: branches
           colors: '#4c1 #97ca00 #a4a61d #dfb317 #fe7d37 #e05d44'
           intervals: 100 90 80 70 60 0
-          on-missing-report: fail
+          on-missing-report: true
           fail-if-coverage-less-than: 0
           fail-if-branches-less-than: 0
-          fail-on-coverage-decrease: false
-          fail-on-branches-decrease: false
+          fail-on-coverage-decrease: true
+          fail-on-branches-decrease: true
 
       - name: Commit the badge (if it changed)
         run: |
