--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx build -t leandro/api-person:${{ github.ref_name }} . --push
-        working-directory: api-person
+        working-directory: ./
