--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Build and Publish Docker Image
 on:
   push:
     tags:
-      - '*'  
+      - '*'
 
 jobs:
   build:
@@ -22,8 +22,10 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Build JAR without tests
+        run: mvn package -DskipTests
+
       - name: Build and push Docker image
         run: |
           docker buildx create --use
           docker buildx build -t leandro/api-person:${{ github.ref_name }} . --push
-        working-directory: ./
