--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,23 @@ on:
       - '*'
 
 jobs:
-  build:
+  build_jar:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up the Java JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Build JAR without tests
+        run: mvn package -DskipTests
+
+  build_docker:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,9 +37,6 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build JAR without tests
-        run: mvn package -DskipTests
 
       - name: Build and push Docker image
         run: |
