--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,8 @@ on:
       - '*'
 
 jobs:
-  build_jar:
+  build:
+    name: Build JAR
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +23,10 @@ jobs:
       - name: Build JAR without tests
         run: mvn package -DskipTests
 
-  build_docker:
+  publish:
+    name: Publish Docker
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
