--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ on:
       - '*'
 
 jobs:
-  build:
-    name: Build JAR
+  build_and_publish:
+    name: Build and Publish Docker
     runs-on: ubuntu-latest
 
     steps:
@@ -22,15 +22,6 @@ jobs:
 
       - name: Build JAR without tests
         run: mvn package -DskipTests
-
-  publish:
-    name: Publish Docker
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
