--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker buildx create --use
-          docker buildx build -t leandro/api-person:${{ github.ref_name }} . --push
+          docker buildx build -t leandrobhmg/api-person:${{ github.ref_name }} . --push
