--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Docker Image
+name: Build and Publish Docker Images
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - '*'
 
 jobs:
-  build_and_publish:
-    name: Build and Publish Docker
+  build_and_publish_api_person:
+    name: Build and Publish Docker api-person
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,39 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (Root)
         run: |
           docker buildx create --use
-          docker buildx build -t leandrobhmg/api-person:${{ github.ref_name }} . --push
+          docker buildx build -t leandrobhmg/api-person-root:${{ github.ref_name }} . --push
+
+  build_and_publish_api_mock:
+    name: Build and Publish Docker (Api Node Mock)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies (npm) in the subdirectory
+        working-directory: api-node-mock
+        run: npm install
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image (Subdirectory)
+        working-directory: api-node-mock
+        run: |
+          docker buildx create --use
+          docker buildx build -t leandrobhmg/api-node_mock:${{ github.ref_name }} . --push
