--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build and push Docker image (Root)
         run: |
           docker buildx create --use
-          docker buildx build -t leandrobhmg/api-person-root:${{ github.ref_name }} . --push
+          docker buildx build -t leandrobhmg/api-person:${{ github.ref_name }} . --push
 
   build_and_publish_api_mock:
     name: Build and Publish Docker (Api Node Mock)
