--- a/application/pom.xml
+++ b/application/pom.xml
@@ -46,4 +46,20 @@
             </exclusions>
         </dependency>
     </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.2</version> <!-- Versão pode variar -->
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.leandro.application.Application</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
