--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3"
 services:
   api-java:
-    image: leandrobhmg/api-person
+    image: leandrobhmg/api-person:0.0.9
     ports:
       - "8080:8080"
     networks:
       - person-network
 
   api-node:
-    image: leandrobhmg/api-node_mock
+    image: leandrobhmg/api-node_mock:0.0.9
     ports:
       - "3000:3000"
     networks:
