--- a/application/pom.xml
+++ b/application/pom.xml
@@ -46,19 +46,19 @@
             </exclusions>
         </dependency>
     </dependencies>
-  <build>
+ <build>
     <plugins>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.2</version> <!-- Versão pode variar -->
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>com.leandro.application.Application</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.7.5</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
 </build>
